# E-BTS

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  DOCKER.md  Dockerfile  README.md  log.txt  record_testing.py  requirements.txt
CAD/CAD/: 20_deg_housing.SLDPRT  20_deg_housing.SLDPRT.SLDASM  20mm_housing_distance.SLDPRT  2nd_iteration_ebts_zaki_version.SLDASM  30mm_housing_distance.SLDPRT  3D_PCB5_lll.SLDASM  3D_PCB_led_mount_2026-02-08(2).SLDASM  3D_PCB_led_mount_2026-02-08.SLDASM  3D_PCB_led_mount__ebts_2.SLDASM  Board~Rysk.SLDPRT  EBTS_v2_setup.SLDASM  Gleb_PCB_0.1.SLDASM  HDR-M-2.54_1X1~HDR-M-2.54_1x1~Rysk.SLDPRT  ICCA_setup.SLDASM  LED-SMD_L3.5-W2.8-RD_LT2835KYCT~LED-SMD_L3.5-W2.8-H0.8-RD_LT2835KYCT~Rysk.SLDPRT  LED~LED-SMD_L3.5-W2.8-RD_LT2835KYCT~LED-SMD_L3.5-W2.8-H0.8-RD_LT2835KYCT~Rysk.SLDASM  Mirrorredone_airis_housing.SLDPRT  Mirrorredone_airis_housing_double.SLDPRT  Skywatcher Finderscope to Male M42x0.75.3mf  Skywatcher Finderscope to Male M42x0.75.IGS  Skywatcher Finderscope to Male M42x0.75.SLDPRT  Skywatcher Finderscope to Male M42x0.75.STEP  Skywatcher Finderscope to Male M42x0.75.x_t  TEST.SLDPRT  TopSilkscreen~Rysk.SLDPRT  VCC~HDR-M-2.54_1X1~HDR-M-2.54_1x1~Rysk.SLDASM  back_place_w_cleats.SLDPRT  balka.SLDPRT  base_assembly_led.SLDASM  blalka_foundation.SLDPRT  body_with_nothing.SLDPRT  double_housing.SLDASM  (+44 more)
UR5/: end.py  generate_path.py  poke_grid.py  pose_utils.py  requirements.txt  run_motion.py  start_pose.py
docker/: build.sh  entrypoint.sh  raw_to_csv.sh  record_sequence.sh  run.sh
src/: CMakeLists.txt  camera.cpp  camera.h  camera_feed_utils.h  camera_utils.h  circle_detector.h  circle_lattice.h  circle_tracker_cli_main.cpp  circle_tracker_config.h  circle_tracking.cpp  circle_tracking.h  combined_main.cpp  console_input_utils.h  display_utils.h  event_window_buffer.h  path_utils.h  qml.qrc  raw_to_csv.cpp  record_sequence.cpp  sequence_recording_controller.h  signal_utils.h  temporal_circle_tracker.h  tracking_render_utils.h  window_icon_utils.h
src/gui/: camera_session_worker.cpp  camera_session_worker.h  export_bridge.h  export_worker.cpp  export_worker.h  frame_view.cpp  frame_view.h  gui_bridge.h  log_stream.h
src/qml/: AccumulationTimeDialog.qml  AddSourceMenu.qml  CameraPane.qml  CircleTrackingPane.qml  ConnectionBanner.qml  DetectionPercentDialog.qml  ExportDialog.qml  Main.qml  Ribbon.qml  SequenceRecordingConsole.qml  Theme.qml
(+65 files in other folders)
